Clean up mobile view
Change-Id: I12147bb9450af567a9e2c821f8230e7fe51410bc

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="usa-overlay"></div>
 <header class="usa-header usa-header--extended forestCityHeader">
-    <div class="usa-navbar">
-        <div class="">
+    <div class="usa-navbar d-flex align-items-center justify-content-between">
+        <div class="flex-grow-1">
             <div class="usa-logo">
                 <em class="usa-logo__text">
-                    <a class="navbar-brand" href="/home" title="FCL 388">
-                        <img id="navbar-image" src="../../../assets/images/brotherhood_pin.jpg" class="d-inline-block align-top">
-                        Forest City Lodge #388
+                    <a class="navbar-brand" href="/home" title="FCL 388" class="d-flex align-items-center">
+                        <img id="navbar-image" src="../../../assets/images/fcl-bell-color.png" class="me-3">
+                        <h2 class="p-0 m-0">Forest City Lodge #388</h2>
                     </a>
                 </em>
             </div>
@@ -19,7 +19,8 @@
     <nav aria-label="Primary Navigation" class="usa-nav">
         <div class="usa-nav__inner">
             <button class="usa-nav__close">
-                <img src="../../../assets/imported/uswds/img/close.svg" role="img" alt="Close"/>
+                Close
+                <!-- <img src="../../../assets/imported/uswds/img/close.svg" role="img" alt="Close"/> -->
             </button>
             <ul class="usa-nav__primary usa-accordion">
                 <li class="usa-nav__primary-item">
