--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,6 +1,6 @@
 <div>
-    <div class="row fclHomeWelcome">
-        <div class="fclAgeBanner"> 
+    <div class="row fclHomeWelcome"><
+        <div class="fclAgeBanner d-flex align-items-center justify-content-center">
             <div class="text-white fclAgeText">Celebrating {{ fclAge }} years of Masonic Pride</div>
         </div>
     </div>
@@ -9,13 +9,13 @@
             <div class="grid-col-12 centered padding-x-12">
                 <h3 class="textColorBlue">What is Freemasonry?</h3>
                 <hr class="textColorBlue"/>
-                <p class="usa-prose padding-x-15">
-                    Freemasonry is the leading fraternal organization in the world. 
-                    Its origins are lost in the unrecorded history of medieval times, but it formally organized in London, England, in 1717. 
-                    Current worldwide membership totals over 3 million Freemasons, 1.1 million of whom are in North America. 
+                <p class="usa-prose">
+                    Freemasonry is the leading fraternal organization in the world.
+                    Its origins are lost in the unrecorded history of medieval times, but it formally organized in London, England, in 1717.
+                    Current worldwide membership totals over 3 million Freemasons, 1.1 million of whom are in North America.
                     With 70,000 Masons and 450 local Lodges, Ohio has one of the largest Masonic memberships of any state in the country.
                 </p>
-                <p class="usa-prose padding-x-15">
+                <p class="usa-prose">
                     As a fraternal organization, Freemasonry unites men of good character who, though of different religious, ethnic or social backgrounds, share a belief in the fatherhood of God and the brotherhood of mankind.
                 </p>
             </div>
