--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -1,8 +1,8 @@
-<div class="grid-row usa-prose">
-    <div class="joinBackground text-white grid-col">
-        <div class="margin-y-5 grid-container grid-offset-3">
-            <h2>How to Join</h2>
-            <p>
+<div class="row usa-prose">
+    <div class="joinBackground text-white col-md-6 col-xs-12 col-xs-12">
+        <div class="margin-y-5 grid-container">
+            <h2 class="centered">How to Join</h2>
+            <p class="centered">
                 To become an Ohio Freemason, you must first meet the following criteria:
             </p>
             <ul>
@@ -28,19 +28,21 @@
                     Be prepared to obtain a background check if requested
                 </li>
             </ul>
-            <p>
+            <p class="centered">
                 Ready to take the next step?
             </p>
-            <button class="usa-button usa-button--accent-warm centered">
-                <span class="textWhite">START YOUR JOURNEY</span>
-            </button>
+            <div class="centered">
+                <button class="usa-button usa-button--accent-warm centered">
+                    <span class="textWhite">START YOUR JOURNEY</span>
+                </button>
+            </div>
         </div>
     </div>
-    <div class="petitionBackground text-white grid-col">
+    <div class="petitionBackground text-white col-md-6 col-xs-12">
         <div class="centered margin-y-5 grid-container">
             <h2>Petition Process</h2>
             <p>
-                If you are ready to start your journey as a Freemason, submit your contact information in our online form. 
+                If you are ready to start your journey as a Freemason, submit your contact information in our online form.
             </p>
             <p>
                 Your inquiry will be referred to a lodge or district in your area.
