--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="d-flex flex-column">
     <header-component></header-component>
     <div>
         <router-outlet></router-outlet>
-    </div> 
-    <join-freemasonry></join-freemasonry>  
+    </div>
+    <join-freemasonry></join-freemasonry>
 </div>
