--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -11,4 +11,8 @@ img {
 .forestCityHeader {
     background-color: lightskyblue;
     width: 100% !important;
+
+    .usa-nav {
+        background-color: lightskyblue;
+    }
 }
