--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,5 +1,5 @@
 .fclHomeWelcome {
-    background: url(../../../assets/images/fcl_ddgm_2021.jpg) no-repeat center;
+    background: url(../../../assets/images/officer2021.png) no-repeat center;
     background-size: cover;
     height: 715px;
     position: relative;
@@ -7,14 +7,11 @@
 
 .fclAgeBanner {
     background-color: darkblue;
-    height: fit-content;
     width: fit-content;
     opacity: 70%;
     position: absolute;
-    top: 63%;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 7px;
+    bottom: 0;
+    width: 100%;
 }
 
 .fclAgeText {
