More polish and history page styling
Change-Id: Ife7dd6cda64679250f66e72fc71def34ae924272

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,12 +1,13 @@
 <div class="usa-overlay"></div>
-<header class="usa-header usa-header--extended forestCityHeader">
+<header class="usa-header usa-header--extended forestCityHeader bg-primary-light">
     <div class="usa-navbar d-flex align-items-center justify-content-between">
         <div class="flex-grow-1">
             <div class="usa-logo">
                 <em class="usa-logo__text">
                     <a class="navbar-brand" href="/home" title="FCL 388" class="d-flex align-items-center">
                         <img id="navbar-image" src="../../../assets/images/fcl-bell-color.png" class="me-3">
-                        <h2 class="p-0 m-0">Forest City Lodge #388</h2>
+                        <h1 class="p-0 m-0 d-block d-sm-none primary-title-small">Forest City Lodge #388</h1>
+                        <h1 class="p-0 m-0 d-none d-sm-block primary-title">Forest City Lodge #388</h1>
                     </a>
                 </em>
             </div>
@@ -16,7 +17,7 @@
             Menu
         </button>
     </div>
-    <nav aria-label="Primary Navigation" class="usa-nav">
+    <nav aria-label="Primary Navigation" class="usa-nav bg-primary-light">
         <div class="usa-nav__inner">
             <button class="usa-nav__close">
                 Close
@@ -150,16 +151,12 @@
                         <a href="/register">Register</a>
                     </li>
                     <li class="usa-nav__secondary-item">
-                        <a href="https://www.facebook.com/lodge388/" target="_blank" rel="noopener noreferrer">
+                        <a class="me-1" href="https://www.facebook.com/lodge388/" target="_blank" rel="noopener noreferrer">
                             <img src="../../../assets/images/facebook_icon.svg"/>
                         </a>
-                    </li>
-                    <li class="usa-nav__secondary-item">
-                        <a href="https://twitter.com/forestcitylodge" target="_blank" rel="noopener noreferrer">
+                        <a class="me-1" href="https://twitter.com/forestcitylodge" target="_blank" rel="noopener noreferrer">
                             <img src="../../../assets/images/twitter_icon.svg"/>
                         </a>
-                    </li>
-                    <li class="usa-nav__secondary-item">
                         <a href="https://www.instagram.com/forestcitylodge388/" target="_blank" rel="noopener noreferrer">
                             <img src="../../../assets/images/instagram_icon.svg"/>
                         </a>
