--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column">
+<div class="d-flex flex-column layout-wrapper">
     <header-component></header-component>
     <div>
         <router-outlet></router-outlet>
