--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,17 @@
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~uswds/dist/css/uswds.min.css';/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: "Fredericka";
+    src: local("Fredericka"), url(./assets/fonts/Fredericka_the_Great/FrederickatheGreat-Regular.ttf) format("truetype");
+}
+
+
+h1,h2,h3 {
+    font-family: Fredericka;
+}
+h1,h2,h3 {
+    padding:0;
+    margin:0;
+}
+
