past master page initial skeleton

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -35,7 +35,7 @@
                                         <a routerLink="/history">Our History</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="#">Our Past Masters</a>
+                                        <a routerLink="/past-masters">Our Past Masters</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="#">Our Current Officers</a>
