--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="row fclHomeWelcome"><
+    <div class="row fclHomeWelcome">
         <div class="fclAgeBanner d-flex align-items-center justify-content-center">
             <div class="text-white fclAgeText">Celebrating {{ fclAge }} years of Masonic Pride</div>
         </div>
