--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~uswds/dist/css/uswds.min.css';/* You can add global styles to this file, and also import other style files */
+
+.centered {
+    text-align: center;
+}
