--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,5 +1,5 @@
 .fclHomeWelcome {
-    background: url(../../../assets/images/officer2021.png) no-repeat center;
+    background: url(../../../assets/images/officer2021.jpg) no-repeat center;
     background-size: cover;
     height: 715px;
     position: relative;
