--- a/src/app/forest-city/our-history/history.component.scss
+++ b/src/app/forest-city/our-history/history.component.scss
@@ -7,6 +7,9 @@ figure {
 }
 
 @media screen and (min-width: 768px) {
+    .timeline-wrapper {
+        padding: 1px;
+    }
     .timeline {
         position: relative;
         &-time {
