--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -49,7 +49,7 @@
                                         <a href="#">Our Calendar</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="#">Our Current Bulletin</a>
+                                        <a href="/bulletin">Our Current Bulletin</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="../../../assets/pdf/FCL_Petition_-_20182.pdf" target="_blank">Our Petition</a>
