--- a/src/app/forest-city/past-masters/past-masters.component.html
+++ b/src/app/forest-city/past-masters/past-masters.component.html
@@ -1,11 +1,11 @@
-<div class="grid-container">
-    <div class="grid-row">
-        <div class="grid-col-12 centered">
-            <div class="fclPastMastersBG">
-            </div>
-            <h2>Past Masters of Forest City Lodge #388</h2>
-        </div>
+<div class="bg-primary-lighter pt-2 pb-2">
+    <div class="grid-col-12 centered">
+        <!-- <div class="fclPastMastersBG">
+        </div> -->
+        <h2 >Past Masters of Forest City Lodge #388</h2>
     </div>
+</div>
+<div>
     <table>
         <tbody>
             <tr *ngFor="">
@@ -14,3 +14,7 @@
         </tbody>
     </table>
 </div>
+
+
+
+
