Future Events wired up
Change-Id: I5faceb88e5af28e0732f9ef93259a0b95f341407

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -46,7 +46,7 @@
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a href="#">Our Calendar</a>
+                                        <a href="/future-events">Our Calendar</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="/bulletin">Our Current Bulletin</a>
