--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -1,7 +1,7 @@
 <div class="row usa-prose">
-    <div class="joinBackground text-white col-md-6 col-xs-12 col-xs-12">
-        <div class="margin-y-5 grid-container">
-            <h3 class="centered">How to Join</h3>
+    <div class="bg-primary-dark text-white col-md-6 col-xs-12 col-xs-12">
+        <div class="margin-y-5 grid-container ">
+            <h3 class="centered mb-2">How to Join</h3>
             <p class="centered">
                 To become an Ohio Freemason, you must first meet the following criteria:
             </p>
@@ -32,30 +32,30 @@
                 Ready to take the next step?
             </p>
             <div class="centered">
-                <button class="usa-button usa-button--accent-warm centered">
-                    <span class="textWhite">START YOUR JOURNEY</span>
-                </button>
+                <a target="_blank" href="https://oh.grandview.systems/public_lodges/inquiry" class="usa-button usa-button--accent-warm centered">
+                    <span class="text-white">START YOUR JOURNEY</span>
+                </a>
             </div>
         </div>
     </div>
-    <div class="petitionBackground text-white col-md-6 col-xs-12">
+    <div class="bg-ink text-white col-md-6 col-xs-12">
         <div class="centered margin-y-5 grid-container">
-            <h3>Petition Process</h3>
+            <h3 class="mb-2">Petition Process</h3>
             <p>
-                If you are ready to start your journey as a Freemason, submit your contact information in our online form.
+                If you are ready to start your journey as a Freemason, reach out to our <a target="_blank" href="https://oh.grandview.systems/public_lodges/lodge/316">online form</a>.
             </p>
             <p>
-                Your inquiry will be referred to a lodge or district in your area.
+                Your inquiry will be referred to our secretary.
             </p>
             <p>
-                If you know of a particular lodge you want to join, please include that in the box asking your reason for interest.
+                Please include Forest City Lodge in the in the box asking your reason for interest.
             </p>
             <p>
                 What happens next? Learn more about the next steps in becoming an Ohio Freemason.
             </p>
-            <button class="usa-button usa-button--accent-warm centered">
-                <span class="textWhite">LEARN MORE</span>
-            </button>
+            <a target="_blank" href="https://www.freemason.com/petition-process/" class="usa-button usa-button--accent-warm centered">
+                <span class="text-white">LEARN MORE</span>
+            </a>
         </div>
     </div>
 </div>
