--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -25,3 +25,11 @@
 .text-color-blue {
     color: #323779
 }
+
+.event-highlight-name {
+    font-size: xxx-large;
+}
+
+.event-highlight-date {
+    margin-bottom: 10%;
+}
