--- a/src/app/forest-city/past-masters/past-masters.component.html
+++ b/src/app/forest-city/past-masters/past-masters.component.html
@@ -9,10 +9,10 @@
         <div class="grid-col usa-card">
             <div class="usa-card__container fclCardContainer">
                 <header class="usa-card__header bg-primary-lighter fclCardHeader">
-                    <h3 class="usa-card__heading centered"> {{ master.name }} </h3>
+                    <h2 class="usa-card__heading centered"> {{ master.name }} </h2>
                 </header>
                 <div class="fclCardHeaderLine"></div>
-                <div class="usa_card__body centered">
+                <div class="centered">
                     <div class="fclImageContainer">
                         <img src="{{ master.imgUrl }}"/>
                     </div>
