--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -48,7 +48,7 @@
                 Your inquiry will be referred to our secretary.
             </p>
             <p>
-                Please include Forest City Lodge in the in the box asking your reason for interest.
+                Please include Forest City Lodge in the box asking your reason for interest.
             </p>
             <p>
                 What happens next? Learn more about the next steps in becoming an Ohio Freemason.
