--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -31,8 +31,10 @@
             </div>
             <div class="col-md-12 col-lg-4">
                 <div class="border-rounded p-3 bg-gray-5 mb-3">
-                    <div class="fs-6 text-align-center mb-2">Early Bird Dinners are at 6:30pm Stated Meetings are at 7:30pm.</div>
-                    <div class="fs-6 text-align-center">Please note reservations are required for all meals</div>
+                    <div class="fs-6 text-align-center mb-2">Early Bird Dinners are at 6:30pm</div>
+                    <div class="fs-6 text-align-center mb-2">Stated Meetings are at 7:30pm</div>
+                    <div class="fs-6 text-align-center">Please note: Reservations are required for all meals</div>
+                    <button class="usa-button usa-button--outline margin-y-1">RSVP Here</button>
                 </div>
                 <div div class="border-rounded p-3 bg-gray-5">
                     <div div class="d-flex align-items-center justify-content-center">
