Polish up events, add home event carousel
Change-Id: I75907cc086f85a44e7f12c591440f7fa1a4bfad6

--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -31,6 +31,11 @@
     font-size: xxx-large;
 }
 
+.event-highlight-description {
+    font-size: xxx-large;
+    margin-top: -.25em;
+}
+
 .event-highlight-date {
     margin-bottom: 10%;
 }
