--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -24,10 +24,28 @@
         </div>
     </div>
 </div>
-<div *ngIf="event">
-    <div class="d-flex align-items-center justify-content-end flex-column" style="background-image: url('{{event.spotlightImage}}');background-size: cover;background-repeat: no-repeat;min-height: 50vw">
-        <div class="event-highlight-name text-white">{{event.name}}</div>
-        <div class="event-highlight-date fs-4 text-white"> {{ event.date | date:'fullDate' }} {{ event.date | date:'shortTime' }} </div>
-        <a class="fs-4 mb-3 text-white" href="#">Make your reservation today!</a>
-    </div>
+<div *ngIf="events.length">
+    <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div *ngFor="let event of events, let i = index" class="carousel-item" [ngClass]="{'active': i === 0}" data-bs-interval="10000">
+            <div class="d-flex bg-ink align-items-center justify-content-end flex-column" style="background-image: url('{{event.spotlightImage}}');background-size: cover;background-repeat: no-repeat;min-height: 50vw; background-position: bottom">
+                <div class="event-highlight-name text-white centered">{{event.name}}</div>
+                <div *ngIf="event.description" class="event-highlight-description text-white centered">{{event.description}}</div>
+                <div class="event-highlight-date fs-4 text-white centered"> {{ event.date | date:'fullDate' }} {{ event.date | date:'shortTime' }} </div>
+                <a class="fs-4 mb-3 text-white centered" href="#">Make your reservation today!</a>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
+
 </div>
