Polish up events, add home event carousel
Change-Id: I75907cc086f85a44e7f12c591440f7fa1a4bfad6

--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -22,7 +22,7 @@
                                     <div>{{event.location}}&nbsp;|&nbsp;</div><div><a class="text-base" [href]="event.addressLink" target="_blank">{{event.address}}</a></div>
                                 </div>
                             </div>
-                            <a *ngIf="event.rsvpOptions" target="_blank" href="#" class="usa-button usa-button--accent-cool centered mb-2">
+                            <a *ngIf="event.rsvpOptions" href="#" class="usa-button usa-button--secondary centered mb-2">
                                 <span class="text-white">RSVP</span>
                             </a>
                         </div>
