initial commit for contact us

--- a/src/app/core/contact-us/contact-us.component.html
+++ b/src/app/core/contact-us/contact-us.component.html
@@ -1,1 +1,10 @@
-<p>contact-us works!</p>
+<div class="grid-container">
+    <div class="grid-row">
+        <div class="grid-col-6">
+            <form>
+                <label for="firstName" class="usa-label">First Name:</label>
+                <input id="firstName" type="text" class="usa-input">
+            </form>
+        </div>
+    </div>
+</div>
