--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -39,7 +39,7 @@
                                         <a routerLink="/past-masters">Our Past Masters</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="#">Our Current Officers</a>
+                                        <a href="">Our Current Officers</a>
                                     </li>
                                 </ul>
                             </div>
@@ -136,8 +136,11 @@
                 <li class="usa-nav__primary-item">
                     <a href="javascript:void(0)" class="usa-nav__link">Join Freemasonry</a>
                 </li>
+                <li class="usa-nav__primary-item">
+                    <a routerLink="/contact-us" class="usa-nav__link">Contact Us</a>
+                </li>
                 <li class="usa-nav__primary-item" *ngIf="isAuthenticated">
-                    <a href="#">Member's Area</a>
+                    <a href="" class="usa-nav__link">Member's Area</a>
                 </li>
             </ul>
             <!-- Top right side of header -->
