--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -42,7 +42,7 @@
         <div class="centered margin-y-5 grid-container">
             <h3 class="mb-2">Petition Process</h3>
             <p>
-                If you are ready to start your journey as a Freemason, reach out to our <a target="_blank" href="https://oh.grandview.systems/public_lodges/lodge/316">online form</a>.
+                If you are ready to start your journey as a Freemason, reach out to our <a routerLink="/contact-us">online form</a>.
             </p>
             <p>
                 Your inquiry will be referred to our secretary.
