--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -32,13 +32,12 @@
                 <div class="event-highlight-name text-white centered">{{event.name}}</div>
                 <div *ngIf="event.description" class="event-highlight-description text-white centered">{{event.description}}</div>
                 <div class="event-highlight-date fs-4 text-white centered"> {{ event.date | date:'fullDate' }} {{ event.date | date:'shortTime' }} </div>
-                <a class="fs-4 mb-3 text-white centered" 
+                <button class="usa-button usa-button--outline usa-button--inverse usa-button--unstyled fs-4 mb-3"
                     href="#rsvpModal"
                     aria-controls="rsvpModal"
-                    data-open-modal>
-                  Make your reservation today!
-                </a>
-                <fcl-rsvp [rsvpDate]="event.date"></fcl-rsvp>
+                    (click)="setDateForRsvp(event.date)"
+                    data-open-modal>Make your reservation today!</button>
+                <fcl-rsvp [rsvpDate]="rsvpDate"></fcl-rsvp>
             </div>
           </div>
         </div>
